# solana-sniper

./: .gitignore  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: api.rs  auto_trader.rs  executor.rs  main.rs  models.rs  risk.rs  rug_checker.rs  scanner.rs  social_monitor.rs  state.rs
nginx/: nginx.conf
sniper-frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
sniper-frontend/src/: App.jsx  main.jsx
sniper-frontend/src/components/: FilterDialog.jsx  Portfolio.jsx  RiskWhale.jsx  Scanner.jsx  WalletButton.jsx
sniper-frontend/src/hooks/: useWalletTrading.js  useWebSocket.js
sniper-frontend/src/lib/: api.js
