[package]
name    = "solana-sniper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sniper"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = { version = "0.21", features = ["native-tls"] }
futures-util       = "0.3"

# HTTP
axum               = { version = "0.7", features = ["ws"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"] }
tower              = "0.4"
tower-http         = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"

# Utils
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1", features = ["v4", "serde"] }
dotenv             = "0.15"
base64             = "0.22"
bs58               = "0.5"
urlencoding        = "2.1"
rust_decimal       = { version = "1", features = ["serde-with-str"] }
parking_lot        = "0.12"
dashmap            = "5"
tokio-cron-scheduler = "0.10"
once_cell          = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"